@@ -1,4 +1,4 @@
-.\" $NetBSD: iwictl.8,v 1.7 2005/06/26 13:12:07 wiz Exp $
+.\" $NetBSD: iwictl.8,v 1.8 2006/08/09 11:35:59 skrll Exp $
 .\"
 .\" Copyright (c) 2004, 2005
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 20, 2005
+.Dd August 9, 2006
 .Os
 .Dt IWICTL 8
 .Sh NAME
@@ -35,13 +35,6 @@
 .Nm
 .Op Fl i
 .Ar iface
-.Nm
-.Op Fl i
-.Ar iface Fl d Ar directory
-.Op Fl m Ar bss|ibss|monitor
-.Nm
-.Op Fl i
-.Ar iface Fl k
 .Nm
 .Op Fl i
 .Ar iface Fl r
@@ -62,23 +55,18 @@ The options are as follows:
 .Bl -tag -width indent
 .It Fl i Ar iface
 Displays adapter's internal statistics.
-.It Fl i Ar iface Fl d Ar directory Oo Fl m Ar bss|ibss|monitor Oc
-Download firmware binary image to the adapter.
-The image is read from the
-.Ar directory
-directory.
-By default, the firmware binary image for BSS (aka infrastructure
-mode) mode is downloaded unless the
-.Fl m
-flag is given.
 Firmware binary images can be found in the
 .Pa pkgsrc/sysutils/iwi-firmware
 package.
-.It Fl i Ar iface Fl k
-Kill the firmware and reset the adapter.
 .It Fl i Ar iface Fl r
 Displays the radio transmitter state (on or off).
 .El
+.Sh FILES
+The firmware is not shipped with
+.Nx .
+It can be obtained via installing the
+.Pa pkgsrc/sysutils/iwi-firmware
+package and is loaded automatically by the kernel once installed.
 .Sh SEE ALSO
 .Xr iwi 4 ,
 .Xr ifconfig 8
